--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PedraPapelTesoura</string>
     <string name="opcao_app">Escolha do App</string>
     <string name="texto_secundario_opcao">Escolha uma opção abaixo:</string>
+    <string name="resultado">Resultado:</string>
 </resources>
